--- a/style.css
+++ b/style.css
@@ -643,6 +643,28 @@ main {
     margin-left: 6px;
 }
 
+.page-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    color: #2b2b2b;
+}
+
+.page-title.contrast {
+    text-align: center;
+    font-weight: 800;
+    color: #2b2b2b;           /* strong contrast */
+    margin: 8px 0 0px;
+    letter-spacing: 0.4px;
+    position: relative;
+}
+
+.page-title.contrast::after {
+    content: "";
+    display: block;
+    width: 80px;
+    height: 4px;
+    margin: 10px auto 0;
+}
 
 footer {
     position: fixed;
