--- a/style.css
+++ b/style.css
@@ -606,6 +606,10 @@ footer {
   /* color: inherit;          /* Keep text color consistent */
 }
 
+.accordion {
+    padding-bottom: 100px;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -644,9 +648,9 @@ main {
 }
 
 .page-title {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    color: #2b2b2b;
+    font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        color: #222;
 }
 
 .page-title.contrast {
