--- a/retail-calculator/sales-report.css
+++ b/retail-calculator/sales-report.css
@@ -9,30 +9,31 @@
 .table-container {
     overflow-x: auto;
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 .styled-table {
-    width: 100%;
     border-collapse: collapse;
     background: #ffffff;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.12);
-    min-width: 500px;
+
+     width: max-content;        /* ⬅ key change */
 }
 
 .styled-table th {
-    background: #4CAF50;
+    background: #3F63D2;
     color: white;
     text-align: left;
-    padding: 10px;
-    font-size: 15px;
-    font-weight: 600;
+    padding: 5px 25px 5px 8px;
+    font-size: 12px;
 }
 
 .styled-table td {
-    padding: 10px;
-    font-size: 15px;
+    padding: 5px 25px 5px 8px;
+    font-size: 12px;
     border-bottom: 1px solid #eee;
 }
 
@@ -123,9 +124,8 @@
 }
 
 .delete-date-btn {
-    background: #ffdddd;
-    border: 1px solid #ff8888;
-    padding: 4px 6px;
+    border: 0px solid #ff8888;
+    padding: 4px 4px;
     border-radius: 6px;
     cursor: pointer;
 }
@@ -139,11 +139,11 @@
 /* Subtle Toggle Button (View / Hide Sales Report) */
 /* NEURO / Neumorphic Toggle Button */
 #reportToggleBtn {
-    background: #f0f0f0;
-    color: #666;  /* Softer grey font */
+    background-color: #3F63D2;
+    color: #FFFFFF;
     padding: 10px 18px;
     border: none;
-    border-radius: 12px;
+    border-radius: 4px;
     font-size: 12px;
     cursor: pointer;
 
@@ -153,11 +153,13 @@
         -4px -4px 8px rgba(255,255,255,0.9);
 
     transition: 0.25s ease;
+
+
 }
 
 /* Hover = gentle lift */
 #reportToggleBtn:hover {
-    color: #555; /* Slightly darker grey on hover */
+    color: #222; /* Slightly darker grey on hover */
     box-shadow:
         6px 6px 12px rgba(0,0,0,0.16),
         -6px -6px 12px rgba(255,255,255,1);
