--- a/style.css
+++ b/style.css
@@ -451,6 +451,41 @@ footer {
   border: 1px solid #ddd;
 }
 
+.upi-pay-btn {
+    background: linear-gradient(
+        180deg,
+        #2B47B8 0%,
+        #213B99 55%,
+        #172A73 100%
+    );
+    color: #FFFFFF;
+    border: 1px solid #12205E;
+    padding: 8px 40px;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+
+    box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.12),
+        0 6px 14px rgba(0,0,0,0.45);
+}
+
+.upi-pay-btn:hover {
+    background: linear-gradient(
+        180deg,
+        #345BC7 0%,
+        #2B47B8 55%,
+        #1E3390 100%
+    );
+}
+
+
+.upi-pay-btn:active {
+    transform: translateY(1px);
+    box-shadow:
+        inset 0 4px 8px rgba(0,0,0,0.55);
+}
+
 /* Typography */
 .bold { font-weight: 700; }
 .text-center { text-align: center; }
@@ -482,7 +517,7 @@ footer {
 
 .details-label {
   font-weight: 600;
-  margin: 16px 0 8px;
+  margin: 30px 0 8px;
   font-size: 1rem;
 }
 
